--- a/webdev/mern/mern-app/frontend/src/components/FormList.css
+++ b/webdev/mern/mern-app/frontend/src/components/FormList.css
@@ -1,39 +1,68 @@
 .form-list {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .form-list-item {
-    background: #fff;
-    padding: 1rem;
-    border: 1px solid #ddd;
-    margin-top: 0.5rem;
-    border-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .form-text {
-    flex: 1;
-  }
-  
-  .form-text p {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .delete-button {
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    margin-left: 1rem;
-    border-radius: 4px;
-  }
-  
-  .delete-button:hover {
-    background-color: #c82333;
-  }
-  
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.form-list-item {
+  background: #fff;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  margin-top: 0.5rem;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-text {
+  flex: 1;
+}
+
+.form-text p {
+  margin: 0;
+  padding: 0;
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
+  border-radius: 4px;
+}
+
+.delete-button:hover {
+  background-color: #c82333;
+}
+
+.header {
+  margin-bottom: 20px;
+}
+
+.page-title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+button.MuiButton-root {
+  margin-left: 10px;
+}
+
+.form-container {
+  margin-top: 20px;
+}
+
+.search-filter-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.alert {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
